# llmmaster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESULTSTYPE.md  llm_master.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
llm_master/: base_model.py  config.py  llm_master.py  setup.py  text_to_text_models.py
llmmaster/: __init__.py  anthropic_models.py  audio_to_audio_models.py  audio_to_text_models.py  base_model.py  cerebras_models.py  config.py  deepseek_models.py  elevenlabs_models.py  flux1_fal_models.py  google_models.py  groq_models.py  image_to_image_models.py  image_to_text_models.py  image_to_video_models.py  inceptionlabs_models.py  llmbase.py  llmmaster.py  lumaai_models.py  meshy_models.py  mistral_models.py  multipart_formdata_model.py  openai_models.py  perplexity_models.py  pikapikapika_models.py  replica_models.py  root_model.py  runway_models.py  sambanova_models.py  skybox_models.py  stable_diffusion_models.py  text_to_audio_models.py  text_to_image_models.py  text_to_text_models.py  tripo_models.py  utils.py  video_to_text_models.py  voicevox_models.py  xai_models.py
tests/: conftest.py  test_anthropic.py  test_audio_to_audio_models.py  test_audio_to_text_models.py  test_cerebras.py  test_deepseek.py  test_elevenlabs.py  test_flux_fal.py  test_google.py  test_groq.py  test_image_to_image_models.py  test_image_to_text_models.py  test_image_to_video_models.py  test_inceptionlabs.py  test_llm_common.py  test_llm_master.py  test_llmmaster.py  test_lumaai.py  test_lumaai_models.py  test_meshy.py  test_meshy_models.py  test_mistral.py  test_openai.py  test_perplexity.py  test_pikapikapika_models.py  test_replica.py  test_runway.py  test_sambanova.py  test_skybox_models.py  test_stable_diffusion.py  test_text_to_audio_models.py  test_text_to_image_models.py  test_text_to_text_models.py  test_tripo.py  test_tripo_models.py  test_video_to_text_models.py  test_voicevox.py  test_xai.py
usecases/: 01_single_model_from_api_file.py  01_single_text_to_text_models.py  01a_single_text_to_text_models.py  01b_single_llm_from_api_file.py  02_multiple_text_to_text_models.py  03_llm_search_reasoning_models.py  03_text_to_image_models.py  03a_llm_reasoning_models.py  (+37 more)
