[project]
name = "llmmaster"
version = "1.5.0"
description = "A unified interface for interacting with multiple LLMs and generative AIs."
readme = "README.md"
authors = [{ name = "Daisuke Yamaguchi", email = "daicom0204@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "requests-toolbelt>=1.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "flake8>=7.3.0",
    "build>=1.5.0",
    "twine>=6.2.0"
]

[project.urls]
Homepage = "https://habatakurikei.com/"
GitHub = "https://github.com/Habatakurikei/llmmaster"
PyPI = "https://pypi.org/project/llmmaster/"

[tool.setuptools.packages.find]
include = ["llmmaster", "llmmaster.*"]
